crates/ruff_python_parser/tests/snapshots/invalid_syntax@statements__with__unclosed_ambiguous_lpar_eof.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..6,
        body: [
            With(
                StmtWith {
                    node_index: NodeIndex(None),
                    range: 0..6,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 5..6,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 6..6,
                                    id: Name(""),
                                    ctx: Invalid,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | with (
  |       ^ Syntax Error: unexpected EOF while parsing
  |
